--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
                 
-                  Hi, i am Olorunda Benedict Olorunda, a web developer focused on crafting
+                  Hi, i am Olorunda Benedict Oyiname, a web developer focused on crafting
                   great Web experiences. Designing and Coding has always
                   been my passion since the days i started working with
                    computers but i found myself into Web Development, 
@@ -122,7 +122,7 @@
                 <h3 class="project-wrapper__text-title">Benkyle POS</h3>
                 <div>
                   <p class="mb-4">
-                    This is a projet on Point of sales, eventory and Accounting
+                    This is a projet on Point of sales, inventory and Accounting
                     web based app, that has come to make the lives of personels
                     who work in the hospitality sector more accountable and relaxed.
                   </p>
@@ -175,8 +175,8 @@
                 <div>
                   <p class="mb-4">
                     This is a web based app that has come to make the work 
-                    of the human resouce manager easy. The HR can manage 
-                    employee details and data approve leave and so much.
+                    of the human resouce manager easier. The HR can manage 
+                    employee details and data approve leave and much more .
                   </p>
                 </div>
                 <a
@@ -227,9 +227,9 @@
                 <div>
                   <p class="mb-4">
                     This is a simple product landing page with lovely 
-                    pictures for customer to view and make choices before 
-                    calling to place orders. will be updated in the nearest 
-                    future to acomodate placing order directly online. 
+                    pictures for customer's view and make choices before 
+                    calling to place orders. It will be updated in the nearest 
+                    future to accomodate placing order directly online. 
                   </p>
                 </div>
                 <a
@@ -281,13 +281,13 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[For inquiry]</p>
+          <p class="contact-wrapper__text">For Enquiry</p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
             href="mailto:example@email.com"
-            >mail me</a
+            >Mail Me</a
           >
         </div>
       </div>
@@ -306,16 +306,16 @@
           </a>
           <a rel="noreferrer" href="#!" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
-          </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          </a> 
+          <a rel="noreferrer" href="https://github.com/Benkyle" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://www.facebook.com/benedict.olorunda" target="_blank">
             <i class="fa fa-facebook fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://www.instagram.com/invites/contact/?i=rtwqk3l37ay2&utm_content=opu2uk" target="_blank">
             <i class="fa fa-instagram fa-inverse"></i>
-            <a rel="noreferrer" href="#!" target="_blank">
+            <a rel="noreferrer" href="https://youtube.com/channel/UCL57xmIYfE1lIlFNcDTpSqg" target="_blank">
               <i class="fa fa-youtube fa-inverse"></i>
             </a>
           </a>
